<resources>
    <string name="app_name">Rgukt Adda</string>
    <string name="password">password..</string>
    <string name="email">Email..</string>
    <string name="login_logo">login logo</string>
    <string name="register">CREATE A NEW ACCOUNT</string>
    <string name="Login_label">LOGIN</string>
    <string name="main_search">search</string>
    <string name="logout">logout</string>
    <string name="setup_accnt_save_bttn">SAVE ACCOUNT INFO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
